--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 theme = 'PaperMod'
 
-baseurl = "https://sophia.github.io" 
+baseurl = "https://sophia1123.github.io" 
 #設定主頁 url
 
 languageCode = "zh-tw" 
